--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "new-pf-sersver",
   "version": "1.0.0",
   "description": "",
+
   "scripts": {
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.10.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typeorm": "^0.3.17",
+    "typescript": "^5.3.3"
   }
 }
