--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "new-pf-sersver",
   "version": "1.0.0",
   "description": "",
-
   "scripts": {
-    "start": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node-dev --respawn --transpile-only index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.10.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.17",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "ts-node-dev": "^2.0.0"
   }
 }
